--- a/server/nodejs/resources/css/survey_edit.css
+++ b/server/nodejs/resources/css/survey_edit.css
@@ -26,6 +26,11 @@
     font-style: italic;
 }
 
+html, body {
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     margin: 0;
 }
